reinitialize project with auth module

--- a/src/Sandbox/appsettings.json
+++ b/src/Sandbox/appsettings.json
@@ -2,6 +2,9 @@
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Sandbox-b90c3c2e-64ca-4659-9c44-4cc86de70d99;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
