--- a/src/Sandbox/bower.json
+++ b/src/Sandbox/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "jquery": "2.2.3",
     "jquery-validation": "1.14.0",
-    "jquery-validation-unobtrusive": "3.2.6"
+    "jquery-validation-unobtrusive": "3.2.6",
+    "normalize-css": "4.1.1"
   },
   "resolutions": {
     "jquery": ">=1.8"
